# porthon

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PROFILING_MATH.md  README.md  STARTER.md  analysis.md  control-center.md  index.html  profiler.py  recommendation-algorithm-architecture.md  remixed-f4b73bdc.tsx  requirements.txt  run.sh
src/backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  utils.py
src/backend/agent/: USER.md  intent.py  prompt_builder.py  retriever.py
src/backend/agents/: __init__.py  base.py  calendar_coach.py  composio_tools.py  content_creator.py  figma_learning.py  models.py  notion_organizer.py  outcome_collector.py  quest_orchestrator.py  schema.py
src/backend/app/: auth.py  deps.py
src/backend/daemon/: analysis_cache.py  watcher.py
src/backend/deepagent/: __init__.py  approval.py  contracts.py  demo_artifacts.py  dispatcher.py  factory.py  lead_os.py  loop.py  policy.py  session.py  stream.py
src/backend/integrations/: __init__.py  composio_client.py  figma_api.py  figma_webhooks.py  notion_api.py  notion_leads_service.py  notion_mirror.py
src/backend/pipeline/: action_planner.py  demo_theo.py  extractor.py  scenario_gen.py
src/backend/rag_storage/: kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json
src/backend/scripts/: composio_catalog.py
src/backend/simulation/: scenarios.py
src/backend/state/: __init__.py  models.py  (+3 more)
(+235 files in other folders)
