[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    "lightrag-hku[api]",
    "neo4j>=5.0.0",
    "qdrant-client>=1.6.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "json-repair>=0.1.0",
    "tenacity>=8.0.0",
]
